# minex

./: CMakeLists.txt  main.cpp  makefile
inc/arpackpp-for-eigen/examples/matrices/nonsym/: lnmatrxe.h  lnmatrxf.h
inc/arpackpp-for-eigen/include/: arugnsym.h  arunsmat.h
